--- a/SistemaSac.Front/css/AdminLTE.css
+++ b/SistemaSac.Front/css/AdminLTE.css
@@ -2546,7 +2546,7 @@ Component: timeline
 */
 /* skin-blue navbar */
 .skin-blue .navbar {
-  background-color: #3c8dbc;
+    background-color: #5C5CCB;
 }
 .skin-blue .navbar .nav a {
   color: rgba(255, 255, 255, 0.8);
@@ -2571,8 +2571,8 @@ Component: timeline
 }
 /* skin-blue logo */
 .skin-blue .logo {
-  background-color: #367fa9;
-  color: #f9f9f9;
+    background-color: #5C5CCB;
+    color: #f9f9f9;
 }
 .skin-blue .logo > a {
   color: #f9f9f9;
