--- a/SistemaSac.Front/SacPaginaMaster.Master
+++ b/SistemaSac.Front/SacPaginaMaster.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Sistema SAC</title>
-    <meta content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no" name="viewport" />
+    <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
 
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/css/font-awesome.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
     <header class="header">
 
         <!-- INICIO CABECERA -->
-        <a href="#" class="logo">S.A.C.</a>
+        <a href="#" class="logo"><i class="fa fa-chevron-circle-right fa-lg" aria-hidden="true"></i><span style="font:larger">S.A.C.</span></a>
         <nav class="navbar navbar-static-top" role="navigation">
             <a href="#" class="navbar-btn sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle Navigation</span>
@@ -119,10 +119,10 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li>
-                                    <a href="Modulos/Contrato/Contrato.aspx"><i class="fa fa-angle-double-right"></i>Contrato</a>
+                                    <a href='<%= ResolveUrl("~/Modulos/Contratos/GestionarContrato.aspx") %>'><i class="fa fa-angle-double-right"></i>Contrato</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-angle-double-right"></i>Carpeta Digital</a>
+                                    <a href='<%= ResolveUrl("~/Modulos/Contratos/MuestraContrato.aspx") %>'><i class="fa fa-angle-double-right"></i>Carpeta Digital</a>
                                 </li>
                                 <li class="treeview">
                                     <a href="#">
@@ -293,13 +293,10 @@
         </div>
     </form>
 
-
-    <asp:ContentPlaceHolder ID="footer" runat="server">
-    </asp:ContentPlaceHolder>
-
         <script src='<%= ResolveUrl("~/jquery/jquery.min.js") %>'></script>
         <script src='<%= ResolveUrl("~/js/bootstrap.min.js") %>' type="text/javascript"></script>
         <script src='<%= ResolveUrl("~/jquery/jquery-ui.min.js") %>' type="text/javascript"></script>
+        <script src='<%= ResolveUrl("~/js/plugins/datepicker/bootstrap-datepicker.js") %>' type="text/javascript"></script>
         <script src='<%= ResolveUrl("~/js/AdminLTE/app.js") %>' type="text/javascript"></script>
 
         <script src='<%= ResolveUrl("~/jquery/jAlert/jquery.alerts.js") %>' type="text/javascript"></script>
@@ -308,6 +305,10 @@
         <script src='<%= ResolveUrl("~/js/plugins/datatables/jquery.dataTables.js") %>'></script>
         <script src='<%= ResolveUrl("~/js/plugins/datatables/dataTables.bootstrap.js") %>'></script>
         <script src='<%= ResolveUrl("~/js/logout.js") %>'></script>
+    <asp:ContentPlaceHolder ID="footer" runat="server">
+    </asp:ContentPlaceHolder>
+
+
 </body>
 </html>
 
